test/errors/rules_error/zs/invalid_id_format_error.zs
package invalid_id_format_error;

rule_group RuleGroup
{
    rule "id-with-slash/not-allowed";
};
